--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@reach/combobox": "^0.15.1",
+    "@react-google-maps/api": "^2.1.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
+    "use-places-autocomplete": "^1.9.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
