--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
