--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "autosuggest-highlight": "^3.1.1",
+    "lodash.throttle": "^4.1.1",
     "material-ui-autocomplete-google-places": "^2.3.0",
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.2",
