--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
     "react-google-maps": "^9.4.5",
+    "react-place-autocomplete": "^0.1.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
     "use-places-autocomplete": "^1.9.1",
